--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body{
      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(26, 2, 2)), url(https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wqI5?ver=bfb7);
      position: relative;
 }
+img{
+     width: 100%;
+     height: 100%;
+     object-fit: contain;
+}
 .main{
      padding: 20px 40px;
     text-align: center;
@@ -188,6 +193,7 @@ input::placeholder{
      font-size: 30px;
      border-bottom: 10px solid #8f8f8f;
      text-align: center;
+     
 }
 .close{
      position: absolute;
@@ -202,4 +208,8 @@ input::placeholder{
 }
 .searchh{
      cursor: pointer;
-}
+}.imags{
+         img{
+          height: 80px;
+         }
+     }
